<resources>
    <string name="app_name">Submission2UIUX</string>
    <string name="search">Search</string>
    <string name="tidak_ada_data">There is no data</string>

    <string name="location">Location</string>
    <string name="_0">0</string>
    <string name="follower">Follower</string>
    <string name="repository">Repository</string>
    <string name="following">Following</string>
    <string name="settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="todo">TODO</string>
    <string name="do_action_for_search">Do a search to display data</string>

    <string name="tab_followers">Followers</string>
    <string name="tab_following">Following</string>
    <string name="github_search">GtiHubSearch</string>
    <string name="no_internet_title">Failed to Connect</string>
    <string name="no_internet_description">Please check your connection and try again</string>
    <string name="username">Username</string>
    <string name="check_user">Check user</string>
    <string name="detail_user">Detail User</string>
    <string name="setting">Setting</string>
    <string name="version">Version</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="change_language_desc">Change the language of this application through the phone settings</string>
    <string name="change_the_theme_in_the_application">Change the theme in the application with Light / Dark mode</string>
    <string name="no_followers">This user has no followers yet.</string>
    <string name="no_follow_desc">Learn more about being social on GitHub.</string>
    <string name="no_followings">This user is not following anyone.</string>
    <string name="no_data_searching">We couldn\'t find any users matching</string>
    <string name="no_data_searching_desc">Please enter the appropriate keywords</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="notification">Notification</string>
    <string name="activate_the_reminder_to_return_to_the_application">Activate the reminder to return to the application at 9:00 a.m.</string>
    <string name="favorite">Favorite</string>
    <string name="app_notification_channel_id" translatable="false">app_channel</string>
    <string name="notification_title">Hello world</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">NO DATA</string>
    <string name="tap_again_to_exit">Tap again to exit</string>

</resources>
