<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:id="@+id/layoutNoData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgFollowNoData"
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/blank_data" />

        <TextView
            android:id="@+id/tvFollowNoData"
            android:layout_below="@id/imgFollowNoData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tidak_ada_data"
            android:textAlignment="center"
            android:textColor="?attr/Text_Color"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvFollowNoDataDesc"
            android:layout_below="@id/tvFollowNoData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/do_action_for_search"
            android:textAlignment="center"
            android:textColor="?attr/Text_Color"
            android:textSize="14sp"
            android:textStyle="normal" />
    </RelativeLayout>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/sweep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvListFollow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />


        </RelativeLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</androidx.constraintlayout.widget.ConstraintLayout>