<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="?attr/backgroundColor">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:background="?attr/backgroundColor"
        android:focusableInTouchMode="true">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/github_search"
                app:titleTextColor="?attr/Icon_color"
                app:layout_scrollFlags="scroll|enterAlways"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/bg_edit_text"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/etSearch"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/search"
                    android:imeOptions="actionDone"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="?attr/text_search"
                    android:textColorHint="?attr/text_search"
                    android:drawableStart="@drawable/ic_search_blue_24dp"
                    android:drawablePadding="15dp"
                    android:textSize="14sp"
                    android:importantForAutofill="no" />

            </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:id="@+id/layoutDataKosong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/imgNoData"
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/blank_data" />

            <TextView
                android:id="@+id/tvNoData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tidak_ada_data"
                android:textAlignment="center"
                android:textColor="@color/text"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvNoDataDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lakukan_pencarian_untuk_menampilkan_data"
                android:textAlignment="center"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:textStyle="normal" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/pbLoading"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fbSettingsTranslate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_settings_black_24dp"
            android:layout_centerInParent="true"
            app:backgroundTint="?attr/Icon_color"
            android:layout_marginBottom="70dp"/>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/sweepRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvListUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/item_list_users"/>


            </RelativeLayout>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>